CV translated to Czech

--- a/less/cv.less
+++ b/less/cv.less
@@ -63,6 +63,11 @@ Contains styles and definitons for curriculum vitae panel
     padding-bottom: 5px;
     margin-bottom: 15px;
     font-weight: 600;
+
+    small {
+      display: block;
+      margin-top: 2px;
+    }
   }
 
   h3 {
