Minor style update + E-mail address fix

--- a/less/main.less
+++ b/less/main.less
@@ -196,7 +196,7 @@ Contains styles and definitons for homepage jbrada.cz
   }
 
   .me__monogram {
-    margin: 0 0 10px;
+    margin: 0 0 15px;
 
     font-weight: 400;
     font-size: 139px;
@@ -207,6 +207,7 @@ Contains styles and definitons for homepage jbrada.cz
     font-size: 16px;
     line-height: 16px;
     text-transform: uppercase;
+    letter-spacing: 0.1em;
   }
 
   @media @mobile {
